--- a/my-lb-deploymeny.yaml
+++ b/my-lb-deploymeny.yaml
@@ -12,9 +12,13 @@ spec:
       labels:
         app: my-lb
     spec:
+      volumes:
+      - name: pv-storage
+        persistentVolumeClaim:
+          claimName: pv-claim
       containers:
       - name: my-lb
-        image: gcr.io/my-cluster-290007/eightbitguy-master-b8626f6
+        image: gcr.io/my-cluster-290007/my-lb-master-2c0ecb2
         ports:
         - containerPort: 80
           name: http
@@ -22,3 +26,6 @@ spec:
           name: https
         - containerPort: 22
           name: ssh
+        volumeMounts:
+        - mountPath: /etc/letsencrypt
+          name: pv-storage
